<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:background="@drawable/sent_msg_bg"
    android:backgroundTint="@color/tasks_color">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5.5dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="5dp"
                    android:text="2"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/task_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:maxLines="2"
                    android:textStyle="bold"
                    android:text="Demo Lorem ipsum"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20.5dp"
                android:layout_marginTop="13.5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/start_time"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/task_time_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="25.04.2023"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/end_time"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/task_time_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="25.04.2023"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/status"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/task_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="2.5dp"
                        android:text="Не начата"
                        android:textColor="@color/status_finished_text"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/importancy"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/task_importancy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="2.5dp"
                        android:text="Средний"
                        android:textColor="@color/status_in_process_text"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/executors"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/task_members"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="0"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/observers"
                        android:textAllCaps="true"
                        android:textColor="@color/text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/observers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginVertical="3.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="0"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_lines" />


            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/clickable_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>


</FrameLayout>